Mexendo como a header e o menu

--- a/index.html
+++ b/index.html
@@ -21,6 +21,33 @@
             <button type="search"><i class="fa fa-search fa-lg"></i></button>
         </form>
     </header>
+    <nav class="menu">
+        <ul>
+            <li>
+                <a href="index.html"><i class="fa fa-home fa-lg" aria-hidden="true"></i> Home</a>
+            </li>
+            <li>
+                <a href="eventos.html"><i class="fa fa-calendar fa-lg" aria-hidden="true"></i> Eventos</a>
+            </li>
+            <li>
+                <a href="lazer.html"><i class="fa fa-glass fa-lg" aria-hidden="true"></i> Lazer</a>
+            </li>
+            <li>
+                <a href="esportes.html"><i class="fa fa-bicycle fa-lg" aria-hidden="true"></i> Esportes</a>
+            </li>
+            <li>
+                <a href="contatos.html"><i class="fa fa-address-book-o fa-lg" aria-hidden="true"></i> Contatos</a>
+            </li>
+            <li>
+                <a href="sobre.html">Sobre</a>
+            </li>
+            <div class="social-icons">
+                <a href="#" class="btn-facebook"><i class="fa fa-facebook fa-lg" aria-hidden="true" ></i></a>
+                <a href="#" class="btn-twitter"><i class="fa fa-twitter fa-lg" aria-hidden="true"></i></a>
+                <a href="#" class="btn-google"><i class="fa fa-google fa-lg" aria-hidden="true"></i></a>
+            </div>
+        </ul>
+    </nav>
 
 
 </body>
