--- a/index.html
+++ b/index.html
@@ -24,22 +24,22 @@
     <nav class="menu">
         <ul>
             <li>
-                <a href="index.html"><i class="fa fa-home fa-lg" aria-hidden="true"></i> Home</a>
+                <a href="index.html" class="btn-home"><i class="fa fa-home fa-lg" aria-hidden="true"></i> Home</a>
             </li>
             <li>
-                <a href="eventos.html"><i class="fa fa-calendar fa-lg" aria-hidden="true"></i> Eventos</a>
+                <a href="eventos.html" class="btn-eventos"><i class="fa fa-calendar fa-lg" aria-hidden="true"></i> Eventos</a>
             </li>
             <li>
-                <a href="lazer.html"><i class="fa fa-glass fa-lg" aria-hidden="true"></i> Lazer</a>
+                <a href="lazer.html" class="btn-lazer"><i class="fa fa-glass fa-lg" aria-hidden="true"></i> Lazer</a>
             </li>
             <li>
-                <a href="esportes.html"><i class="fa fa-bicycle fa-lg" aria-hidden="true"></i> Esportes</a>
+                <a href="esportes.html" class="btn-esportes"><i class="fa fa-bicycle fa-lg" aria-hidden="true"></i> Esportes</a>
             </li>
             <li>
-                <a href="contatos.html"><i class="fa fa-address-book-o fa-lg" aria-hidden="true"></i> Contatos</a>
+                <a href="contatos.html" class="btn-contatos"><i class="fa fa-address-book-o fa-lg" aria-hidden="true"></i> Contatos</a>
             </li>
             <li>
-                <a href="sobre.html">Sobre</a>
+                <a href="sobre.html" class="btn-sobre"><i class="fa fa-file-text-o fa-lg" aria-hidden="true"></i> Sobre</a>
             </li>
             <div class="social-icons">
                 <a href="#" class="btn-facebook"><i class="fa fa-facebook fa-lg" aria-hidden="true" ></i></a>
@@ -48,6 +48,46 @@
             </div>
         </ul>
     </nav>
+    <div class="menu-esquerdo">
+        <ul>
+            <li>
+                <a href="#" class="fazer">Aprenda a fazer</a>
+            </li>
+            <li>
+                <a href="#">Bolos</a>
+            </li>
+            <li>
+                <a href="#">Doces</a>
+            </li>
+            <li>
+                <a href="#">Salgados</a>
+            </li>
+            <li>
+                <a href="#">Bordados</a>
+            </li>
+            <li>
+                <a href="#">Croche</a>
+            </li>
+            <li>
+                <a href="#">Tricot</a>
+            </li>
+        </ul>
+        <br>
+        <ul>
+            <li>
+                <a href="#" class="destaques">Destaques</a>
+            </li>
+            <li>
+                <a href="#">Premiações</a>
+            </li>
+            <li>
+                <a href="#">Ganhadores</a>
+            </li>
+        </ul>
+    </div>
+
+
+
 
 
 </body>
