--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@
     <nav class="menu">
         <ul>
             <li>
+                <a href="#" class="btn-menu"><i class="fa fa-th-list fa-lg" aria-hidden="true"></i></a>
+            </li>
+            <li>
                 <a href="index.html" class="btn-home"><i class="fa fa-home fa-lg" aria-hidden="true"></i> Home</a>
             </li>
             <li>
@@ -51,8 +54,7 @@
     <div class="menu-esquerdo">
         <ul>
             <li>
-                <a href="#" class="fazer">Aprenda a fazer</a>
-            </li>
+                <a href="#" class="fazer">Aprenda a fazer</a></li>
             <li>
                 <a href="#">Bolos</a>
             </li>
@@ -88,13 +90,13 @@
     <div class="menu-direito">
         <aside class="onde-estamos">
             <h2>Onde estamos</h2>
-            <p>Rua Rui Jacques de Moraes - Torrão de Ouro, São José dos Campos - São Paulo</p>
+            <p>Rua Francisco Paes - Centro, São José dos Campos - São Paulo</p>
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3667.5703375530306!2d-45.88780028544145!3d-23.18587675371721!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94cc4a163073694b%3A0x66ef0d4cc6048f56!2sFaculdade+Bilac!5e0!3m2!1spt-BR!2sbr!4v1510089607095"></iframe>
             <h2>Contatos</h2>
             <ul>
-                <li><i class="fa fa-phone fa-lg"></i>(12)6666-6969</li>
-                <li><i class="fa fa-whatsapp fa-lg"></i>(12)98240-não é do seu interese</li>
-                <li><i class="fa fa-envelope fa-lg"></i>lucas.vale.oli@gmail.com</li>
+                <li><i class="fa fa-phone fa-lg"></i> (12) 6666-6969</li>
+                <li><i class="fa fa-whatsapp fa-lg"></i> (12) 98240-não é do seu interese</li>
+                <li><i class="fa fa-envelope fa-lg"></i> lucas.vale.oli@gmail.com</li>
             </ul>
         </aside>
 
