--- a/index.html
+++ b/index.html
@@ -23,8 +23,20 @@
     </header>
     <nav class="menu">
         <ul>
-            <li>
-                <a href="#" class="btn-menu"><i class="fa fa-th-list fa-lg" aria-hidden="true"></i></a>
+            <li class="dropdown">
+                <a href="#" class="btn-menu"><i class="fa fa-th-list fa-lg" aria-hidden="true"></i>
+                    <div class="dropdown-content">
+                            <a href="#" class="fazer">Aprenda a fazer</a>
+                <a href="#">Bolos</a>
+                <a href="#">Doces</a>
+                <a href="#">Salgados</a>
+                <a href="#">Bordados</a>
+                <a href="#">Croche</a>
+                <a href="#">Tricot</a>
+                <a href="#" class="destaques">Destaques</a>
+                <a href="#">Premiações</a>
+                <a href="#">Ganhadores</a>
+                </div>
             </li>
             <li>
                 <a href="index.html" class="btn-home"><i class="fa fa-home fa-lg" aria-hidden="true"></i> Home</a>
@@ -51,42 +63,6 @@
             </div>
         </ul>
     </nav>
-    <div class="menu-esquerdo">
-        <ul>
-            <li>
-                <a href="#" class="fazer">Aprenda a fazer</a></li>
-            <li>
-                <a href="#">Bolos</a>
-            </li>
-            <li>
-                <a href="#">Doces</a>
-            </li>
-            <li>
-                <a href="#">Salgados</a>
-            </li>
-            <li>
-                <a href="#">Bordados</a>
-            </li>
-            <li>
-                <a href="#">Croche</a>
-            </li>
-            <li>
-                <a href="#">Tricot</a>
-            </li>
-        </ul>
-        <br>
-        <ul>
-            <li>
-                <a href="#" class="destaques">Destaques</a>
-            </li>
-            <li>
-                <a href="#">Premiações</a>
-            </li>
-            <li>
-                <a href="#">Ganhadores</a>
-            </li>
-        </ul>
-    </div>
     <div class="menu-direito">
         <aside class="onde-estamos">
             <h2>Onde estamos</h2>
