Correção do Menu

--- a/index.html
+++ b/index.html
@@ -23,19 +23,22 @@
     </header>
     <nav class="menu">
         <ul>
+
             <li class="dropdown">
-                <a href="#" class="btn-menu"><i class="fa fa-th-list fa-lg" aria-hidden="true"></i>
-                    <div class="dropdown-content">
-                            <a href="#" class="fazer">Aprenda a fazer</a>
-                <a href="#">Bolos</a>
-                <a href="#">Doces</a>
-                <a href="#">Salgados</a>
-                <a href="#">Bordados</a>
-                <a href="#">Croche</a>
-                <a href="#">Tricot</a>
-                <a href="#" class="destaques">Destaques</a>
-                <a href="#">Premiações</a>
-                <a href="#">Ganhadores</a>
+                <div class="btn-menu">
+                    <i class="fa fa-th-list fa-lg" aria-hidden="true"></i>
+                </div>
+                <div class="dropdown-content">
+                    <a href="#" class="fazer">Aprenda a fazer</a>
+                    <a href="#">Bolos</a>
+                    <a href="#">Doces</a>
+                    <a href="#">Salgados</a>
+                    <a href="#">Bordados</a>
+                    <a href="#">Croche</a>
+                    <a href="#">Tricot</a>
+                    <a href="#" class="destaques">Destaques</a>
+                    <a href="#">Premiações</a>
+                    <a href="#">Ganhadores</a>
                 </div>
             </li>
             <li>
